--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -33,23 +33,28 @@
                     <div class="sns-item2">
                         <img src="images/icon1.png" alt="一位">
                         <img src="images/icon4.png" alt="shorts">
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=cCFz8DNDN6ZfN7yn">少女レイ/みきとP</a>
+                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=mts25cidgcRobbUe">少女レイ/みきとP</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=uhJ4onNhNyQ9l4Kp">晩餐歌/tuki</a>
+                        <a href="https://youtube.com/shorts/0_Fx0hDyex0?si=Io54HStxHY3299gi">Alice in 冷凍庫/Orangestar</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/N4cSCvGhJ-g?si=fV6OVMFRff5ILM1D">『だきしめるまで。』/MINI</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
@@ -70,22 +75,27 @@
                         <img src="images/icon2.png" alt="二位">
                         <img src="images/icon4.png" alt="shorts">
                         <a href="https://youtube.com/shorts/byHg-tAah7I?si=el8ufTCHbOpP-roA">夕立のりぼん/みきとP</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/MEY0-ApQFPs?si=SOo577_HpkhLuRTo">斜陽/ヨルシカ</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/UxQUjjzhj80?si=TGXFiYuplJb0b21F">忘れてください/ヨルシカ</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/kFu_URahSk0?si=-7mcnFlimK9G_ZP3">モニタリング/DECO*27</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=KXj-vue1GtugI_Wu">晩餐歌/tuki.</a>
+                        <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon5.png" alt="shorts">
