--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -33,7 +33,7 @@
                     <div class="sns-item2">
                         <img src="images/icon1.png" alt="一位">
                         <img src="images/icon4.png" alt="shorts">
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=mts25cidgcRobbUe">少女レイ/みきとP</a>
+                        <a href="https://youtube.com/shorts/czUDiwSPy64?si=SNFBp0IyOsxQ5kel">少女レイ/みきとP</a>
                         <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
@@ -43,12 +43,12 @@
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=rUBQAiBbka9sko70">ド屑/なきそ</a>
+                        <a href="https://youtube.com/shorts/tDa45RakKOE?si=j7y6Ehf4dbYMeUKk">ド屑/なきそ</a>
                         <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/RCAEsENGeGw?si=p-V-HQ_CK8_Ls3YC">CH4NG/Giga</a>
+                        <a href="https://youtube.com/shorts/pdXMbSpNIH0?si=gO8NngZF6OurO5OC">CH4NG/Giga</a>
                         <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
