--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -48,7 +48,7 @@
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/pdXMbSpNIH0?si=gO8NngZF6OurO5OC">CH4NG/Giga</a>
+                        <a href="https://youtube.com/shorts/pdXMbSpNIH0?si=gO8NngZF6OurO5OC">&nbsp;CH4NG/Giga</a>
                         <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
