--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="sns-item2">
                         <img src="images/icon4.png" alt="shorts">&emsp;
-                        <a href="https://youtube.com/shorts/0_Fx0hDyex0?si=Io54HStxHY3299gi">Alice in 冷凍庫/Orangestar</a>
+                        <a href="https://youtube.com/shorts/0_Fx0hDyex0?si=Io54HStxHY3299gi">&nbsp;Alice in 冷凍庫/Orangestar</a>
                         <img src="images/icon6.png" alt="カーソル">
                     </div>
                     <div class="sns-item2">
