--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -110,6 +110,7 @@
                         <br><br>
                     </section>
                 </main>
+            </section>
             <footer class="page-footer">
                 <img src="images/footer.png" alt="フッター">
             </footer>
