--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -55,7 +55,7 @@
                         &emsp;<img src="images/icon4.png" alt="shorts">
                         <a href="https://youtube.com/shorts/N4cSCvGhJ-g?si=fV6OVMFRff5ILM1D">『だきしめるまで。』/MINI</a>
                         <img src="images/icon6.png" alt="カーソル">
-                    </div>
+                    </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
                         <span>ラブレター/YOASOBI</span>
@@ -91,7 +91,7 @@
                         &emsp;<img src="images/icon4.png" alt="shorts">
                         <a href="https://youtube.com/shorts/kFu_URahSk0?si=-7mcnFlimK9G_ZP3">モニタリング/DECO*27</a>
                         <img src="images/icon6.png" alt="カーソル">
-                    </div>
+                    </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon4.png" alt="shorts">
                         <a href="https://youtube.com/shorts/RCAEsENGeGw?si=KXj-vue1GtugI_Wu">晩餐歌/tuki.</a>
