--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -58,7 +58,7 @@
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>ラブレター/YOASOBI</span>
+                        <span>ラブレター/YOASOBI</span>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
@@ -68,7 +68,7 @@
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>劣等上等/Giga</span>
+                        <span>劣等上等/Giga</span>&emsp;&emsp;&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
@@ -99,13 +99,13 @@
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>贖罪/傘村トータ</span>
+                        <span>贖罪/傘村トータ</span>&emsp;&emsp;&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
                         <img src="images/icon3.png" alt="三位">
                         <img src="images/icon5.png" alt="shorts">
-                        <span>秘密/はるまきごはん</span>
+                        <span>秘密/はるまきごはん</span>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <br><br>
