--- a/izuho_omi_Birthday_2025/contents.html
+++ b/izuho_omi_Birthday_2025/contents.html
@@ -58,17 +58,17 @@
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>ラブレター/YOASOBI</span><br>&emsp;
+                        <span>ラブレター/YOASOBI</span><br>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/cXI1ZbLPTb0?si=mGddkDy-wX_5l3Ik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>病名は愛だった/Neru&amp;z'5</span><br>&emsp;
+                        <span>病名は愛だった/Neru&amp;z'5</span><br>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/z55uSTzHGm8?si=8j7vgwP-rUxjH2Uo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>劣等上等/Giga</span><br>&emsp;
+                        <span>劣等上等/Giga</span><br>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/iUIOdsyBORo?si=cOnfcgy9d5z5hYv8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
@@ -99,13 +99,13 @@
                     </div><br>
                     <div class="sns-item2">
                         &emsp;<img src="images/icon5.png" alt="shorts">
-                        <span>贖罪/傘村トータ</span><br>&emsp;
+                        <span>贖罪/傘村トータ</span><br>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/yvcTrGw7wy8?si=lAlPZ7DLEDe4CpO1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div><br>
                     <div class="sns-item2">
                         <img src="images/icon3.png" alt="三位">
                         <img src="images/icon5.png" alt="shorts">
-                        <span>秘密/はるまきごはん</span><br>&emsp;
+                        <span>秘密/はるまきごはん</span><br>&emsp;&emsp;
                         <iframe width="320" height="180" src="https://www.youtube.com/embed/78AvhK0dY2Q?si=2uZvQJs3QD6tTlEy" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                     <br><br>
